[build-system]
requires = ["setuptools>=66.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bleakheart"
authors = [
  { name="Fabrizio Smeraldi", email="fabrizio@smeraldi.net" },
]
description = "An asynchronous BLE Heart Monitor library with support for additional data from Polar monitors (ECG, accelerometers, PPG)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]
license= {text="MPL-2.0"}
dynamic = ["dependencies", "version"]

[project.urls]
Homepage="https://github.com/fsmeraldi/bleakheart"
Repository="https://github.com/fsmeraldi/bleakheart.git"

[project.scripts]
#script_name = "module.submodule:function"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version={attr="bleakheart._version.__version__"}
